# qipconfig

./: .gitmodules  CMakeLists.txt  ClickableLabel.qml  MainWindow.qml  README.md  app.manifest  app.rc  developerinformation.cpp  developerinformation.h  main.cpp  networkadapter.h  networkadaptermodel.cpp  networkadaptermodel.h  networkinformation.cpp  networkinformation.h  resources.qrc  theme.cpp  theme.h  theme_linux.cpp  theme_mac.mm  theme_win.cpp  themehelper.cpp  themehelper.h  themenotifier.cpp  themenotifier.h  translationmanager.cpp  translationmanager.h  utils.cpp  utils.h
qml/: AboutDialog.qml  AcrylicWindow.qml  ChromeButtonBase.qml  ChromeCloseButton.qml  ChromeMaximizeButton.qml  ChromeMinimizeButton.qml  ClickableAppTitle.qml  ClickableLabel.qml  InformationButton.qml  MainWindow.qml  OptionButtonBase.qml  QtLogoButton.qml  RefreshButton.qml  TitleBar.qml  main.qml
translations/: QIPConfig_en_US.ts  QIPConfig_zh_Hans.ts
